--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,22 +1,27 @@
 plugins {
-    id 'com.android.application'
-    id 'org.jetbrains.kotlin.android'
-    id 'kotlin-kapt'
-    id 'androidx.navigation.safeargs'
-    id 'com.google.gms.google-services'
+    id "kotlin-android"
+    id "com.android.application"
+    id "org.jetbrains.kotlin.android"
+    id "com.google.gms.google-services"
+    id "kotlin-kapt"
+    id "dagger.hilt.android.plugin"
 }
 
 android {
-    compileSdk 31
+    namespace 'com.example.spotifyanime'
+    compileSdk 33
 
     defaultConfig {
         applicationId "com.example.spotifyanime"
         minSdk 21
-        targetSdk 31
+        targetSdk 33
         versionCode 1
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        vectorDrawables {
+            useSupportLibrary true
+        }
     }
 
     buildTypes {
@@ -25,29 +30,48 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
-    dataBinding{
-        enabled = true
-    }
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
     kotlinOptions {
         jvmTarget = '1.8'
+        freeCompilerArgs += [
+                "-Xopt-in=kotlin.RequiresOptIn"
+        ]
     }
-    buildToolsVersion '32.0.0'
+    buildFeatures {
+        compose true
+    }
+    composeOptions {
+        kotlinCompilerExtensionVersion '1.3.0'
+    }
+    packagingOptions {
+        resources {
+            excludes += '/META-INF/{AL2.0,LGPL2.1}'
+        }
+    }
 }
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'androidx.core:core-ktx:1.7.0'
-    implementation 'androidx.appcompat:appcompat:1.4.1'
-    implementation 'com.google.android.material:material:1.6.0'
+    implementation 'androidx.core:core-ktx:1.8.0'
+    implementation 'androidx.appcompat:appcompat:1.5.1'
+    implementation 'com.google.android.material:material:1.7.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.4'
-    androidTestImplementation 'androidx.text:runner:1.2.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.0'
+
+    //Compose
+    implementation "androidx.activity:activity-compose:1.5.1"
+    implementation "androidx.compose.material3:material3:1.0.0-beta01"
+    implementation "androidx.compose.animation:animation:1.2.1"
+    implementation "androidx.compose.ui:ui-tooling:1.3.2"
+    implementation "androidx.navigation:navigation-compose:2.5.3"
+    implementation "androidx.constraintlayout:constraintlayout-compose:1.0.1"
+    androidTestImplementation "androidx.compose.ui:ui-test-junit4:1.2.1"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-compose:2.5.1"
 
     //Firebase
     implementation platform('com.google.firebase:firebase-bom:31.1.1')
@@ -63,8 +87,9 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.1"
 
     //Dependency Injection / Hilt
-    implementation 'com.google.dagger:hilt-android:2.44.2'
-    kapt 'com.google.dagger:hilt-compiler:2.44.2'
+    implementation "com.google.dagger:dagger-android-support:2.42"
+    implementation "com.google.dagger:hilt-android:2.44.2"
+    kapt "com.google.dagger:hilt-android-compiler:2.44"
 
     //Room
     implementation "androidx.room:room-runtime:2.4.3"
