--- a/build.gradle
+++ b/build.gradle
@@ -1,13 +1,19 @@
 buildscript {
     dependencies {
         classpath 'com.google.gms:google-services:4.3.14'
+        classpath "com.android.tools.build:gradle:7.2.2"
+        classpath "com.google.dagger:hilt-android-gradle-plugin:2.44.2"
+    }
+    ext {
+        compose_ui_version = '1.1.1'
     }
 }// Top-level build file where you can add configuration options common to all sub-projects/modules.
 plugins {
-    id 'com.android.application' version '7.2.0' apply false
-    id 'com.android.library' version '7.2.0' apply false
-    id 'org.jetbrains.kotlin.android' version '1.6.10' apply false
+    id 'com.android.application' version '7.3.1' apply false
+    id 'com.android.library' version '7.3.1' apply false
+    id 'org.jetbrains.kotlin.android' version '1.7.10' apply false
     id 'androidx.navigation.safeargs' version '2.4.2' apply false
+    id 'com.google.dagger.hilt.android' version '2.44.2' apply false
 }
 
 task clean(type: Delete) {
