--- a/app/build.gradle
+++ b/app/build.gradle
@@ -64,10 +64,11 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.0'
 
     //Compose
-    implementation "androidx.activity:activity-compose:1.5.1"
-    implementation "androidx.compose.material3:material3:1.0.0-beta01"
-    implementation "androidx.compose.animation:animation:1.2.1"
-    implementation "androidx.compose.ui:ui-tooling:1.3.2"
+    implementation "androidx.activity:activity-compose:1.6.1"
+    implementation "androidx.compose.material3:material3:1.1.0-alpha04"
+    implementation "androidx.compose.material:material:1.3.1"
+    implementation "androidx.compose.animation:animation:1.3.3"
+    implementation "androidx.compose.ui:ui-tooling:1.3.3"
     implementation "androidx.navigation:navigation-compose:2.5.3"
     implementation "androidx.constraintlayout:constraintlayout-compose:1.0.1"
     androidTestImplementation "androidx.compose.ui:ui-test-junit4:1.2.1"
